--- a/index.html
+++ b/index.html
@@ -1,100 +1,53 @@
-<!--Declaração do tipo de documento HTML-->
 <!DOCTYPE html>
-<!--Início do documento HTML-->
 <html lang="pt-br">
-<!--Cabeçalho da página com meta-informações, links de estilo e título-->
 
 <head>
-
-    <meta charset="UTF-8" <meta name="viewpoint" content="width=device-width" , initial-scale="1.0">
-    <title>
-        Meu Portifólio
-    </title>
+    <!-- Cabeçalho com meta-informações, links de estilo e título -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Portifólio</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
 
-
-    <!--Cabeçaçlho com informações de perfil-->
+    <!-- Cabeçalho com informações de perfil -->
     <header>
-
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" width="150" height="150">
-        <p>
-            Eu sou Fernanda_
-        </p>
-        <h1>
-            Eu ensino Programação
-        </h1>
+        <p>Eu sou Fernanda_</p>
+        <h1>Eu ensino Programação</h1>
         <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional usando HTML, CSS e JavaScript.</p>
-        <p>
-            Minhas Habilidades:
-        </p>
+        <p>Minhas Habilidades:</p>
         <ul>
-
-            <li>
-                HTML
-            </li>
-            <li>
-                CSS
-            </li>
-            <li>
-                JavaScript
-            </li>
-            <li>
-                Scratch
-            </li>
-
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Scratch</li>
         </ul>
-
     </header>
-    <!--Conteúdo principal com a lista de projetos-->
+
+    <!-- Conteúdo principal com a lista de projetos -->
     <main>
-
-        <h2>
-            Meus projetos
-        </h2>
+        <h2>Meus projetos</h2>
         <section>
-            <h3>
-                Projeto 1
-            </h3>
-            <p>
-                Minha biblioteca: Uma Webpage Personalizada
-            </p>
+            <h3>Projeto 1</h3>
+            <p>Minha biblioteca: Uma Webpage Personalizada</p>
         </section>
         <section>
-
-            <h3>
-                Projeto 2
-            </h3>
-            <p>
-                Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência Artificial
-            </p>
+            <h3>Projeto 2</h3>
+            <p>Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência Artificial</p>
         </section>
         <section>
-
-            <h3>
-                Projeto 3
-            </h3>
-            <p>
-                Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
-            </p>
+            <h3>Projeto 3</h3>
+            <p>Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch</p>
         </section>
     </main>
 
-    <!--Rodapé com informações de contato-->
+    <!-- Rodapé com informações de contato -->
     <footer>
-
-        <h2>
-            Entre em contato
-        </h2>
-        <p>
-            Github: femascheti
-        </p>
-        <p>
-            © 2024 Fernanda Mascheti
-        </p>
+        <h2>Entre em contato</h2>
+        <p>Github: femascheti</p>
+        <p>© 2024 Fernanda Mascheti</p>
     </footer>
 
 </body>
