--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- Cabeçalho com informações de perfil -->
     <header>
+        <!-- Certifique-se de que o caminho da imagem está correto -->
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" width="150" height="150">
         <p>Eu sou Fernanda_</p>
         <h1>Eu ensino Programação</h1>
