--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Cabeçalho com informações de perfil -->
     <header>
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" width="150" height="150">
-        <p>Eu sou Fernanda_</p>
+        <p>Eu sou Fernanda.</p>
         <h1>Eu ensino Programação</h1>
         <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional usando HTML, CSS e JavaScript.</p>
         <p>Minhas Habilidades:</p>
