--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<   !DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -249,3 +249,5 @@
 <!--Inclusão do JavaScript do Bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <!------------------------------------------------------------------------------------------------------------------------------------------------------------->
+
+</html>
